--- a/maker/src/scss/style.scss
+++ b/maker/src/scss/style.scss
@@ -517,8 +517,48 @@ body {
 }
 
 .popup-video {
+	&_actived .popup-video__content {
+		display: flex;
+	}
+	
 	&__content {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 9;
+
+		width: 100%;
+		height: 100%;
+
+		justify-content: center;
+		align-items: center;
+
+		background-color: rgba(#000000, 0.9);
+
 		display: none;
+	}
+
+	&__close-button {
+		position: absolute;
+		top: 50px;
+		right: 50px;
+
+		cursor: pointer;
+
+		opacity: 0.5;
+
+		transition: .5s;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
+
+	&__iframe {
+		max-width: 1100px;
+		width: 90%;
+
+		height: 500px;
 	}
 
 	&__button {
