--- a/maker/src/scss/_media.scss
+++ b/maker/src/scss/_media.scss
@@ -3,7 +3,56 @@
 }
 
 @media (max-width: 992px) {
-	
+	.header {
+		&__button {
+			display: none;
+		}
+
+        &-nav {
+            margin-right: 0;
+        }
+	}
+
+	.menu-burger {
+		display: flex;
+	}
+
+	.menu {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		z-index: 9;
+
+		height: 100vh;
+
+		flex-direction: column;
+		justify-content: center;
+
+		background-color: #000000;
+
+		transform: translateY(-100%);
+
+		opacity: 0;
+
+        margin-top: 0;
+        
+		transition: .5s;
+
+		&_actived {
+			transform: translateY(0);
+
+			opacity: 1;
+		}
+
+		&__item_mobile-button {
+			display: flex;
+		}
+
+		&__link {
+			font-size: 24px;
+		}
+	}
 }
 
 @media (max-width: 768px) {
