--- a/maker/src/scss/_media.scss
+++ b/maker/src/scss/_media.scss
@@ -1,5 +1,97 @@
-@media (max-width: 1200px) {
-	
+@media (max-width: 1352px) {
+	.hero {
+		&__img-box {
+			width: 55%;
+
+			margin-right: 0;
+		}
+
+		&__icon-box {
+			&:nth-child(2) {
+				left: 60px;
+			}
+
+			&:nth-child(3) {
+				bottom: -20px;
+			}
+			
+			&:nth-child(4) {
+				top: 16px;
+				right: 29px;
+			}
+
+			&:nth-child(5) {
+				right: 42px;
+				bottom: 14px;
+			}
+		}
+	}
+}
+
+@media (max-width: 1160px) {
+	.hero {
+		padding-top: 200px;
+
+		&__img-box {
+			width: 500px;
+
+			margin-top: 0;
+		}
+
+		&__icon-box {
+			transform: scale(0.85);
+
+			&:nth-child(2) {
+				top: -30px;
+				left: 50px;
+			}
+
+			&:nth-child(3) {
+				bottom: -35px;
+			}
+			
+			&:nth-child(4) {
+				top: 0;
+			}
+
+			&:nth-child(5) {
+				right: 15px;
+				bottom: 0;
+			}
+		}
+	}
+}
+
+@media (max-width: 1050px) {
+	.hero {
+		&__container {
+			justify-content: center;
+
+			text-align: center;
+		}
+
+		&__content {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		&__title {
+			max-width: 700px;
+
+			margin-bottom: 60px;
+		}
+
+		&__img-box {
+			display: none;
+
+			&_mobile {
+				display: block;
+
+				margin-bottom: 50px;
+			}
+		}
+	}
 }
 
 @media (max-width: 992px) {
@@ -8,9 +100,9 @@
 			display: none;
 		}
 
-        &-nav {
-            margin-right: 0;
-        }
+		&-nav {
+			margin-right: 0;
+		}
 	}
 
 	.menu-burger {
@@ -24,19 +116,18 @@
 		right: 0;
 		z-index: 9;
 
+		transform: translateY(-100%);
+
 		height: 100vh;
 
 		flex-direction: column;
 		justify-content: center;
 
 		background-color: #000000;
-
-		transform: translateY(-100%);
-
 		opacity: 0;
 
-        margin-top: 0;
-        
+		margin-top: 0;
+
 		transition: .5s;
 
 		&_actived {
@@ -51,22 +142,120 @@
 
 		&__link {
 			font-size: 24px;
+			color: #ffffff;
 		}
 	}
 }
 
 @media (max-width: 768px) {
-	
+	.hero__title {
+		font-size: 42px;
+	}
 }
 
 @media (max-width: 576px) {
-	
+	.hero {
+		&__title {
+			font-size: 34px;
+		}
+
+		&__description,
+		&__button {
+			font-size: 18px;
+		}
+
+		&__img-box {
+			width: 450px;
+		}
+
+		&__icon-box {
+			&:nth-child(2) {
+				top: -35px;
+				left: 35px;
+			}
+
+			&:nth-child(3) {
+				left: 30px;
+				bottom: -45px;
+			}
+			
+			&:nth-child(4) {
+				top: -12px;
+				right: 15px;
+			}
+
+			&:nth-child(5) {
+				right: 5px;
+			}
+		}
+	}
 }
 
 @media (max-width: 480px) {
-	
+	.hero {
+		&__title {
+			font-size: 28px;
+
+			margin-bottom: 40px;
+		}
+
+		&__img-box {
+			width: 350px;
+		}
+
+		&__icon-box {
+			transform: scale(0.5);
+
+			&:nth-child(2) {
+				top: 0;
+				left: 25px;
+			}
+
+			&:nth-child(3) {
+				left: 22px;
+			}
+			
+			&:nth-child(4) {
+				top: 20px;
+			}
+
+			&:nth-child(5) {
+				right: 20px;
+				bottom: -35px;
+			}
+		}
+	}
+}
+
+@media (max-width: 400px) {
+	.hero__title {
+		font-size: 25px;
+	}
 }
 
 @media (max-width: 360px) {
-	
+	.hero {
+		&__description {
+			font-size: 16px;
+		}
+
+		&__img-box {
+			width: 300px;
+			
+		}
+
+		&__icon-box {
+			&:nth-child(2) {
+				left: 15px;
+			}
+
+			&:nth-child(3) {
+				left: 7px;
+			}
+
+			&:nth-child(4) {
+				top: 0;
+			}
+		}
+	}
 }
