Fixed the header and fonts
Removed unnecessary margins, converted to flexbox; Ribeye font replaced by Roboto font

--- a/traveland/src/scss/_media.scss
+++ b/traveland/src/scss/_media.scss
@@ -32,15 +32,11 @@
 	.header {
 		&__container {
 			display: flex;
-			justify-content: center;
-		}
-
-		&__logo {
-			margin-right: auto;
+			justify-content: space-between;
 		}
 
 		&-nav {
-			order: 1;
+			margin-left: 0;
 		}
 
 		&__button {
