--- a/traveland/src/scss/style.scss
+++ b/traveland/src/scss/style.scss
@@ -221,8 +221,9 @@ body {
 // Hero styles
 
 .hero {
-	// min-height: 100vh;
+	min-height: 100vh;
 	height: 100vh;
+	max-height: 900px; // for screen site
 
 	display: flex;
 	align-items: center;
